# SIGMODContest2023

./: .gitignore  CMakeLists.txt  README.md  hnsw_nndescent.cpp
efanna/: .gitignore  CMakeLists.txt
efanna/include/efanna/: Xoshiro-cpp.h  dist_header.h  distance.h  distfunc.h  hash_table7.h  index.h  index_graph.h  index_kdtree.h  index_pq.h  ljr_nndes.h  lru_cache.h  my_heap.h  my_nndes.h  neighbor.h  util.h
efanna/src/: index.cpp  index_graph.cpp  index_kdtree.cpp  index_pq.cpp  index_random.cpp  my_nndes.cpp
main/: CMakeLists.txt  hierarchical_v2.cpp  hierarxchical_nndescent.cpp  order_hnsw.cpp  sample_data.cpp  test_filter.cpp  test_kdtree_graph.cpp  test_my_nndes.cpp  test_nndescent.cpp  test_nndescent_batch.cpp  test_nndescent_refine.cpp
utils/: CMakeLists.txt
utils/include/utils/: brute_force.h  dist_func.h  dist_header.h  hnsw_space_ip.h  hnsw_space_l2.h  io_utils.h  logger.h  random_utils.h  recall_utils.h  sort_utils.h  thread_safe_vec.h  timer.h
utils/src/: brute_force.cpp  io_utils.cpp  logger.cpp  random_utils.cpp  recall_utils.cpp
utils/test/: dist_test.cpp  io_test.cpp  logger_test.cpp  random_uint_test.cpp  sort_utils_test.cpp  thread_safe_test.cpp
